# Snowslide

./: .gitignore  LICENSE.txt  README.md  avalanche_maps_for_gdirs.ipynb  paper.md  pyproject.toml  running_oggm_with_avalanches.ipynb  setup.py
example/: How_to_use_OGGMxSnowslide.ipynb  How_to_use_OGGMxSnowslidePrePro.ipynb  How_to_use_snowslide.ipynb  download_era5_data.nc  nb_guillem.ipynb  real_setup-withSnowSlide.py
example/tests/tests_data/argentiere_data/: Heat_map_ASC.tif  Heat_map_DESC.tif  SA_MtBlanc_ASC.tif  SA_MtBlanc_DESC.tif  dem.tif  glacier_mask_argentiere.tif  gridded_data_argentiere.nc
example/tutorials/: download_era5_and_run.ipynb  download_era5_data.nc
snowslide/: __init__.py  cfg.py  cli.py  display_2Dresults.py  display_3Dresults.py  func_dev.ipynb  functions.py  oggm_snowslide_compat.py  oggm_snowslide_compat_minimal.py  preprocess_data.py  snowslide.py  snowslide_main.py  snowslide_tests.py  snowslidexOGGM.py  test.ipynb  utils.py
test/: snowslide_tests.py  test_snowslide.py
test/data/: DEM_Mt_blanc_Talefre.tif  reference_talefre_output_d8.npy  reference_talefre_output_mfd.npy
