[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowslide"
version = "0.0.1"
authors = [
  {name = "Marin Kneib", email = "marin.kneib@gmail.com"},
  {name = "Guillem Carcanade", email = "guillem.carcanade@student-cs.fr"},
]
description = "A simple parametrisation of snow transport and deposition by avalanches for OGGM."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OGGM/Snowslide"
"Bug Tracker" = "https://github.com/OGGM/Snowslide/issues"
